src/components/Portfolio/index.scss
// .imageSlider{
//     border: solid 1px red;
//     height: 30vh;
//     width: 20%;
// }
// .portfolio-page{
//     display: flex;
//     flex-direction: row;
// }
// .text-b{
//     left:10%;
//     top:50%;
//     transform: translateY(-50%);
//     width: 40%;
//     max-height: 90%;
// }
// .test{
//     display: flex;

//     justify-content: center;
//     align-content: center;
//     width: 80%;
//     border: solid 1px red;
//     text-align: center;
// }
.portfolio-page {
    // border: solid white 1px;
    height: 100vh;
    overflow-y: auto;
    scrollbar-width: thin;
    scrollbar-color: #ffd700 black;
    .test {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        height: 100%;
        transform-style: preserve-3d;
        animation: fadeIn 1s forwards;
        animation-delay: 1s;

        .project-container {
            // border: solid red 1px;
            height: 60vh;
            max-width:60%;
            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: space-evenly;
            .flip-card {
                background-color: transparent;
                width: 30vh;
                height: 42vh;
                padding: 30px;
                // border: 1px solid #f1f1f1;
                border-radius: 20px;
                perspective: 1000px; /* Remove this if you don't want the 3D effect */
                .flip-card-inner {
                    font-family: 'Coolvetica';
                    position: relative;
                    border-radius: 20px;
                    width: 100%;
                    height: 100%;
                    // text-align: center;
                    transition: transform 0.8s;
                    transform-style: preserve-3d;
                    h1{
                        color: #ffd700;
        
                      }
                      p{
                font-family: sans-serif;
                        // border: red solid 1px;
                        color: #fff;
                      }
                      ul{
                        text-indent: 10%;
                        text-align: start;
                        color: #fff;
                        list-style: circle;
                        min-width: fit-content;
                        list-style: none;
                        border: green solid 1px;
                        li{
                            
                            margin-left: 10%;
                        }
                      }
                  }
              }
              .flip-card:hover .flip-card-inner {
                transform: rotateY(180deg);
              }
              .flip-card-front, .flip-card-back {
                position: absolute;
                width: 100%;
                height: 100%;
                border-radius: 20px;

                -webkit-backface-visibility: hidden; /* Safari */
                backface-visibility: hidden;
              }
              .flip-card-front {
                // background-color: #bbb;
                border-radius: 20px;
                color: black;
                text-align: center;
            
               
              }
              .flip-card-front img {
                width: 100%; /* Make the image take the full width of the parent */
                height: 100%; /* Make the image take the full height of the parent */
                object-fit: cover; /* Cover the entire area without distortion */
                display: block; /* Remove bottom space below the image */
                border-radius: 20px;
                filter: blur(1px);

              }
              .flip-card-back {
                background-color: #181818;
                border-radius: 20px;
                display: flex;
                flex-direction: column;
                padding: 10px;
                // color: white;
                overflow-y:auto ;
                scrollbar-width: thin;
              scrollbar-color: #888 black;

                transform: rotateY(180deg);
                a{
                    text-align: center;
                    align-items: end;
                }
                
              }
             
        }

        .my-text-zone {
            // position: absolute;
            // left:10%;
            // top:50%;
            // transform: translateY(-50%);

            width: 40%;
            // border: solid green 1px;

            // max-height: 90%;
            h1 {
                font-size: 53px;
                font-family: 'Coolvetica';
                color: #ffd700;
                font-weight: 400;
                margin-top: 0;
                position: relative;
                margin-bottom: 40px;
                left: 10px;

                &::before {
                    content: '<h1>';
                    font-family: 'La Belle Aurore';
                    font-size: 18px;
                    position: absolute;
                    margin-top: -10px;
                    opacity: 0.6;
                    left: -10px;
                    line-height: 18px;
                }

                &::after {
                    content: '</h1>';
                    font-family: 'La Belle Aurore';
                    font-size: 18px;
                    line-height: 18px;
                    position: absolute;
                    left: -30px;
                    bottom: -20px;
                    margin-left: 20px;
                    opacity: 0.6;
                }
            }

            p {
                font-style: 13px;
                color: #fff;
                font-family: sans-serif;
                font-weight: 100;
                min-width: fit-content;
                animation: pulse 1s;
                opacity: 0.6;

                &:nth-of-type(1) {
                    animation-delay: 1.1s;

                }

                &:nth-of-type(2) {
                    animation-delay: 1.2s;

                }

                &:nth-of-type(3) {
                    animation-delay: 1.3s;

                }

            }
        }
    }
}
@media screen and (max-width: 600px) {
  .portfolio-page{
    overflow-x: hidden;
  .test{

  .my-text-zone{
    h1{
      font-size: 30px;
      width: 60vh;
    }
  }
  .project-container{
    .flip-card{

      .flip-card-inner{
        width: 25vh;
      }
    }
  }
}

}
}

